--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.19.5,<2
-fire>=0.4.0,<0.5.0
-requests>=2.27.1,<3
+numpy
+fire
+requests
 ffmpeg-python
 yt_dlp
 pyarrow
@@ -11,16 +11,16 @@ wandb
 pandas
 tqdm
 timeout-decorator
-scenedetect[opencv]==0.6
+scenedetect[opencv]
 decord
-torch==2.0.0
+torch
 langdetect
-torchdata==0.6.0
-torchaudio==2.0.0
+torchdata
+torchaudio
 soundfile
 omegaconf
 einops
-transformers==4.30.0
+transformers
 Pillow
 accelerate
 bitsandbytes
